Enhance CI workflow with PostgreSQL service
Added PostgreSQL service for CI and updated steps.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,23 +8,35 @@ jobs:
   ci:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout do código
-        uses: actions/checkout@v4
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: test
+          POSTGRES_DB: testdb
+        ports:
+          - 5432:5432
 
-      - name: Configurar Node.js
-        uses: actions/setup-node@v4
+    env:
+      DATABASE_URL: postgresql://test:test@localhost:5432/testdb
+      JWT_SECRET: test
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
           node-version: "20"
+          cache: "npm"
 
-      - name: Instalar dependências
-        run: npm install
+      - run: npm install
 
-      - name: Gerar cliente Prisma
-        run: npx prisma generate
+      - run: npx prisma generate
 
-      - name: Build do TypeScript
-        run: npm run build
+      - run: npx prisma migrate deploy
 
-      - name: Rodar testes (se tiver)
-        run: npm test
+
+      - run: npm run build
+
+      - run: npm test
