--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,38 +8,23 @@ jobs:
   ci:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_USER: test
-          POSTGRES_PASSWORD: test
-          POSTGRES_DB: testdb
-        ports:
-          - 5432:5432
-
-    env:
-      DATABASE_URL: postgresql://test:test@localhost:5432/testdb
-      JWT_SECRET: test
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout do código
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Configurar Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
 
-      - run: npm install
+      - name: Instalar dependências
+        run: npm install
 
-      - run: npx prisma generate
+      - name: Gerar cliente Prisma
+        run: npx prisma generate
 
-      - run: npx prisma migrate deploy
+      - name: Build do TypeScript
+        run: npm run build
 
-
-      - run: npm run build
-
-      - run: npm test
-        env:
-          DATABASE_URL: ${{ env.DATABASE_URL }}
-          JWT_SECRET: ${{ env.JWT_SECRET }}
+      - name: Rodar testes (se tiver)
+        run: npm test
