--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "helmet": "8.1.0",
     "pg": "8.16.3",
     "prisma": "6.19.0",
+    "swagger-jsdoc": "6.2.8",
+    "swagger-ui-express": "5.0.1",
     "tsx": "4.21.0",
     "zod": "4.1.13"
   },
@@ -29,6 +31,7 @@
     "@types/express": "5.0.5",
     "@types/jest": "30.0.0",
     "@types/node": "24.10.1",
+    "@types/supertest": "6.0.3",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "eslint": "8.57.0",
@@ -40,6 +43,7 @@
     "eslint-plugin-promise": "6.1.1",
     "jest": "30.2.0",
     "prettier": "3.2.5",
+    "supertest": "7.2.2",
     "ts-jest": "29.4.5",
     "ts-node-dev": "2.0.0",
     "typescript": "5.9.3"
