--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,12 @@ jobs:
           node-version: "20"
 
       - run: npm i -g @railway/cli
-
+      
+      - run: rm -rf ~/.config/railway || true
+      
+      
       - name: Deploy no Railway
-        run: railway up
+        run: railway up --ci
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
           RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
