--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Deploy no Railway
         run: railway up --ci
         env:
-          RAILWAY_TOKEN: 8c302b8c-d95a-4bbe-bba8-94c655d729a8
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
           RAILWAY_PROJECT_ID: 0a336047-e5d9-4507-86e2-6bde7063bc66
 
           NODE_ENV: production
