--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       
       
       - name: Deploy no Railway
-        run: railway up --ci
+        run: railway up --ci --service airy-expression
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
           RAILWAY_PROJECT_ID: 0a336047-e5d9-4507-86e2-6bde7063bc66
